workload/yamls/quarkus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-reactive
  labels:
    app: quarkus-reactive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-reactive
  template:
    metadata:
      labels:
        app: quarkus-reactive
    spec:
      serviceAccountName: quarkus-reactive
      containers:
        - image: gcr.io/aerial-day-343510/quarkus-reactive:v1
          imagePullPolicy: Always
          name: svc
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: quarkus-reactive
  labels:
    app: quarkus-reactive
spec:
  selector:
    app: quarkus-reactive
  ports:
    - port: 80
      name: http
      targetPort: 8080
