workload/yamls/VS.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quarkus-reactive
spec:
  hosts:
    - '*'
  gateways:
    - public-gateway
  http:
    - route:
      - destination:
          host: quarkus-reactive.default.svc.cluster.local
          port:
            number: 80
